# NewsChatbot-BE

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  news_ingestion.py  pyproject.toml  requirements.txt  run.py
app/api/v1/endpoints/: chat.py  news.py
app/core/: config.py  logging.py
app/models/: chat.py  news.py
app/rag/: embeddings.py  query_analyzer.py  vector_store.py
app/services/: chat_service.py  news_processor_service.py  news_service.py
app/utils/: text_processor.py
